added image uploading facility

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_storageBucket = snapnews-ecc6b.appspot.com
 VITE_messagingSenderId = 226463822592 
 VITE_appId = 1:226463822592:web:2e95ea793d58e6676439e5
 VITE_measurementId = G-BK544R8GSR
+VITE_Image_Hosting_key = 1c611875f6706fbb73909bc6c876e775
