--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
