--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
+    "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
